[package]
name = "first_lib"
version = "0.1.4"
authors = ["muzammilaliaree@gmail.com"]
edition = "2018"
description = "Table Library"
license = "MIT"
repository = "https://github.com/alimuzammil/first_library"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
